--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -362,7 +362,9 @@
             <div class="section-title  text-center">
               <h2>TARIFICATION DES PLACES DE PARKING</h2>
               <span class="title-line"><i class="fa fa-car"></i></span>
-              <p>Des prix en fonction des lieux et dégréssifs sur le temps</p>
+              <p>Des prix en fonction des lieux et dégréssifs sur le temps.<br>
+                Les chiffres ci-dessous sont donnés à titre indicatif.
+              </p>
             </div>
           </div>
           <!-- Section Title End -->
@@ -381,7 +383,7 @@
 
               <ul class="package-list">
 
-                <li>   <a href="#" >CHAMPS ÉLYSÉES - 4,99€</a> </li>
+                <li>   <a href="#" >CHAMPS-ÉLYSÉES - 4,99€</a> </li>
                 <li>  <a href="#"> LA DÉFENSE - 3,99€</a> </li>
                 <li>    <a href="#">INVALIDES - 4,99€</a> </li>
                 <li>    <a href="#">MUSÉE D'ORSAY - 4,99€</a> </li>
@@ -428,7 +430,7 @@
 
               <ul class="package-list">
                 <li>   <a href="#" >MADELEINE - 140,90€</a> </li>
-                <li>  <a href="#">PLACE VENDÖME - 99,90€</a> </li>
+                <li>  <a href="#">PLACE VENDÔME - 99,90€</a> </li>
                 <li>    <a href="#">BEAUGRENELLE- 110,90€</a> </li>
                 <li>    <a href="#">OPÉRA GARNIER - 105,99€</a> </li>
                 <li>    <a href="#">BERCY VILLAGE - 115,99€</a> </li>
@@ -496,7 +498,7 @@
                 <h2>À propos de nous</h2>
                 <div class="widget-body">
                   <img src="assets/img/logo.png" alt="JSOFT">
-                  <p>Présent dans toute la France, SharePark vous propose des parkings disponibles à toute heure de la journée</p>
+                  <p>Présent dans toute la France, SharePark vous propose des parkings disponibles à toute heure de la journée.</p>
 
                   <div class="newsletter-area">
                     <form action="#">
@@ -541,7 +543,7 @@
                     </li>
                     <li>
                       <a href="#">
-                        Des parkings disponibles <br> à tout moment
+                        Des parkings disponibles <br> à tout moment.
                         <i class="fa fa-long-arrow-right"></i>
                       </a>
                     </li>
